k8s/base/core/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dyvine
  labels:
    app.kubernetes.io/name: dyvine
    app.kubernetes.io/part-of: dyvine
