k8s/base/core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dyvine-api
  namespace: dyvine
  labels:
    app.kubernetes.io/name: dyvine
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: dyvine
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  selector:
    app.kubernetes.io/name: dyvine
    app.kubernetes.io/component: api
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
